--- a/whentheyseeus.html
+++ b/whentheyseeus.html
@@ -77,7 +77,7 @@ a {
 
 a:link, a:visited {
 	color: #000000;
-	text-decoration: none;
+	text-decoration: underline;
 }
 
 a:hover {
@@ -88,7 +88,6 @@ a:hover {
 a.article-link:link, a.article-link:visited {
 	color: #bada55;
 	text-decoration: underline;
-	font-weight: bolder;
 	font-size: 16px;
 }
 
@@ -187,7 +186,7 @@ footer {
 
 		<div class="flex-item-middle">
 			<h1>THE BOUGIE HIPPY</h1>
-				<a href="tbhinfo.html">info</a> | 
+				<a href="bloginfopg.html">info</a> | 
 				<a href="tbh3columns.html">blog</a>
 		</div>
 
