--- a/bloginfopg.html
+++ b/bloginfopg.html
@@ -7,6 +7,218 @@
 
 	<title>Info | The Bougie Hippy</title>
 	
+<style>
+* {
+	box-sizing: border-box;
+}
+
+img {
+	max-width: 100%;
+}
+
+body {
+	font-family: arial, tahoma, verdana;
+	background-color: #FFFFFF;
+	color: #000000;
+	text-align: center;
+}
+
+h1 {
+	font-family: "Shadows Into Light", "Comic Sans MS", sans-serif;
+	font-weight: bolder;
+}
+
+h2 {
+	font-family: "Shadows Into Light", "Comic Sans MS", sans-serif;
+	color: #3e9dd6;
+}
+
+h3 {
+	font-family: "Shadows Into Light", "Comic Sans MS", sans-serif;
+	padding-top: 15px;
+	color: #3e9dd6;
+	text-decoration: underline;
+}
+
+h5 {
+	font-size: 10px;
+	font-weight: lighter;
+	color: #FFFFFF;
+}
+
+h6 {
+	color: #3e9dd6;
+}
+
+p {
+	text-align: center;
+	font-size: 14px;
+	font-family: verdana;
+}
+
+a {
+	font-family: arial, tahoma, verdana;
+	font-size: 14px;
+}
+
+a:link, a:visited {
+	color: #000000;
+	text-decoration: underline;
+}
+
+a:hover {
+	color: #3e9dd6;
+	text-decoration: underline;
+}
+
+a:active {
+	color: #bada55;
+	text-decoration: underline;
+}
+
+input[type=text], select {
+	width: 100%;
+	padding: 12px;
+	border: 2px solid #3e9dd6;
+	border-radius: 4px;
+	resize: vertical;
+}
+
+label {
+	padding: 12px 12px 12px 0;
+	display: inline-block;
+	font-weight: bold;
+	float: center;
+	color: #FFFFFF;
+}
+
+input[type=submit] {
+	background-color: #3e9dd6;
+	color: #FFFFFF;
+	padding: 12px 20px;
+	border: none;
+	border-radius: 8px;
+	cursor: pointer;
+	float: right;
+}
+
+input [type=submit]:hover {
+	background-color: #bada55;
+}
+
+footer {
+	bottom: 0;
+	padding-top: 10px;
+	width: 100%;
+	text-align: center;
+}
+
+#logo {
+	height: 75px;
+	width: 55px;
+}
+
+#input {
+	width: 400px;
+}
+
+.top-container {
+	background-color: #FFFFFF;
+	text-align: center;
+	padding-bottom: 20px;
+}
+
+.flex-container {
+	background-color: white;
+	text-align: center;
+	display: flex;
+	flex-flow: row nowrap;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.flex-item-left {
+	background-color: white;
+	margin-left: 0;
+}
+
+.flex-item-middle {
+	background-color: white;
+	margin-left: 40px;
+	margin-right: 0;
+}
+
+.flex-item-right {
+	background-color: white;
+	margin-right: 0;
+}
+
+.header {
+	background: #bada55;
+	padding: 3px;
+	color: #000000;
+}
+
+.content {
+	padding: 0 250px;
+}
+
+a.funkyfont:link, a.funkyfont:visited {
+	font-family: "Permanent Marker";
+	font-size: 16px;
+	color: #bada55;
+}
+
+.container {
+	border-radius: 30px;
+	background-color: #bada55;
+	padding: 20px;
+	margin: 0 auto;
+}
+
+.col-25 {
+	float: left;
+	width: 25%;
+	margin-top: 6px;
+}
+
+.col-75 {
+	float: left;
+	width: 75%;
+	margin-top: 6px;
+}
+
+.row:after {
+	content: "";
+	display: table;
+	clear: both;
+}
+
+.sticky {
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+
+.sticky + .content {
+	padding-top: 100px;
+}
+
+@media screen and (max-width: 600px) {
+	img {
+		max-width: 100%;
+	}
+	.body {
+		font-family: tahoma, arial, verdana;
+		text-align: justify;
+	}
+	.col-25, .col-75, input[type=submit] {
+		width: 100%;
+		margin-top: 0;
+	}
+}
+</style>
 </head>
 <body>
 
