--- a/ghc19.html
+++ b/ghc19.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	
+<!-- Google Font Style Sheets -->	
 <link href="https://fonts.googleapis.com/css?family=Shadows Into Light" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Bad Script" rel="stylesheet">
+	
+	<!-- Page Title -->
+	<title>Grace Hopper Celebration 2019</title>
 
 <!-- Logo Image -->
 <div class="top-container">
