--- a/bloginfopg.html
+++ b/bloginfopg.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Google Fonts stylesheets -->
 <link href="https://fonts.googleapis.com/css?family=Shadows Into Light" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Permanent Marker" rel="stylesheet">
-
+	<!-- Page Title -->
 	<title>Info | The Bougie Hippy</title>
 	
 <style>
@@ -60,17 +62,17 @@ a {
 	font-family: arial, tahoma, verdana;
 	font-size: 14px;
 }
-
+/* White Links and Visited Links */
 a:link, a:visited {
 	color: #000000;
 	text-decoration: underline;
 }
-
+/* Link turns blue on hover */
 a:hover {
 	color: #3e9dd6;
 	text-decoration: underline;
 }
-
+/* Green Link when active */
 a:active {
 	color: #bada55;
 	text-decoration: underline;
@@ -83,7 +85,7 @@ input[type=text], select {
 	border-radius: 4px;
 	resize: vertical;
 }
-
+	
 label {
 	padding: 12px 12px 12px 0;
 	display: inline-block;
