--- a/ghc19.html
+++ b/ghc19.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta charset="utf-8">	
 <meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <!-- Google Font Style Sheets -->	
